# mef

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: postgres.secrets.yaml.example
cron/: mef.cron
docs/: README_mef.md  README_mef_updated_v2.md  aft_core_integration.md  core-us-etfs-daily-final.md  focus-universe-us-stocks-final.md  mef_audit_model.md  mef_build_order.md  mef_cia_future_overlay.md  mef_core_pullback_watchlist.md  mef_cron.md  mef_design_spec.md  mef_layered_gating.md  mef_llm_gate.md  mef_operations.md  mef_out_of_scope.md  mef_price_check.md
docs/bu20260520/: README.md  README_mef.md  focus-universe-us-stocks-final.md  mef_audit_model.md  mef_build_order.md  mef_llm_gate.md  mef_operations.md  mef_out_of_scope.md  mef_price_check.md  muse-engine-forecaster-overview.md  todos.md  udc_mart_forward_event_columns.md
docs/research/: mef_entry_quality_research_plan.md
notes/: core-us-etfs-daily-final.md  udc_mart_forward_event_columns.md
scripts/: cron_run.sh
scripts/research/: mef_entry_quality_research.sql  mef_plan_geometry_compare.py  run_entry_quality_research.py
sql/: mef_bootstrap.sql  mef_ow_grants.sql
sql/mefdb/: 001_schema_and_core_tables.sql  002_llm_gate_fields.sql  003_shadow_score.sql  004_paper_score.sql  005_gate_review_disposition.sql  006_recommendation_provenance.sql  007_recommendation_pnl_daily.sql  008_score_realized_pnl.sql  009_multi_engine_scaffold.sql  010_multi_engine_postures.sql  011_layered_gating.sql  012_gate_rich_output.sql  013_core_pullback_watchlist.sql  014_when_kind_allow_run.sql  (+1 more)
(+97 files in other folders)
